fix: placeholder alignments

--- a/packages/carbon-blocks-react/src/bem.styl
+++ b/packages/carbon-blocks-react/src/bem.styl
@@ -19,8 +19,11 @@ $selectionHaloColor = #accef78d
   flex 1
   padding 0 calc(50% - 360px)
   padding-top: 80px;
+  padding-bottom: 240px;
+
   > div
     scroll-margin-bottom 100px
+
 
 // text
 #ct
@@ -39,10 +42,15 @@ $selectionHaloColor = #accef78d
 
 // page title
 .cpage > .title
-  font-size 2.5em
+  font-size 2.8em
   font-weight bold
-  line-height 40px
+  line-height 48px
   margin-bottom 20px
+
+  // placeholder
+  &:after
+    top 8px // related to height of the page title
+
   [data-name=emoji]
     margin 0 4px
 
@@ -66,6 +74,9 @@ $selectionHaloColor = #accef78d
     flex 1
     padding 2px
 
+    &:after
+      padding-left 2px;
+
 // placeholder
 .placeholder
   position absolute
@@ -75,7 +86,6 @@ $selectionHaloColor = #accef78d
   pointer-events: none
   user-select none
   opacity: 0.4
-  padding-left: 1px;
 
 // title wrapper
 .ctiw
@@ -94,13 +104,15 @@ $selectionHaloColor = #accef78d
 // bullet list
 .bullet-list > .ctiw > .title
   margin-left: 26px
+  &:after
+    padding-left 2px;
 
 .bullet-list > .ctiw > .title:after
   @extend .placeholder
 
 .bullet-list__marker
   line-height $lineHeight
-  padding 3px 8px
+  padding 2px 8px
   user-select: none
   position absolute
   left 0
@@ -110,14 +122,17 @@ $selectionHaloColor = #accef78d
 .todo > .ctiw > .title
   margin-left: 26px
   flex 1
+  &:after
+    padding-left 2px;
 
 .todo > .ctiw > .title:after
   @extend .placeholder
-  //left 26px
+
+//left 26px
 
 .todo__checkbox
   display flex
-  padding 8px 6px
+  padding 9px 6px
   position absolute;
 
 .collapsible > .ctiw > .title
@@ -144,6 +159,10 @@ $selectionHaloColor = #accef78d
   .collapsible-empty-content
     display none
 
+.number-list > .ctiw > .title
+  &:after
+    padding-left 2px;
+
 .cnl__ti
   margin-left: 28px
   flex 1
@@ -151,9 +170,9 @@ $selectionHaloColor = #accef78d
 .cnl__label
   width 28px;
   display flex
-  line-height 30px
+  line-height $lineHeight
   justify-content end
-  padding-right 8px;
+  padding 2px 10px
   user-select: none
   position absolute;
 
@@ -161,6 +180,7 @@ $selectionHaloColor = #accef78d
 .quote
   > .cnest
     margin-left 0
+
     > .number-list
       padding-left 0;
 
@@ -171,12 +191,16 @@ $selectionHaloColor = #accef78d
   border-radius 4px
   box-shadow 0 0 0 2px #f4d999 inset
   margin: 10px 0
+
   > [data-name=title]
     padding-left 2px;
+
   > .cnest
     margin-left 0px
+
     > .number-list
       padding-left 0;
+
 // divider
 .cdiv
   outline: none
@@ -220,6 +244,8 @@ $selectionHaloColor = #accef78d
 
 .h-1 > .title
   @extend .h1__title
+  &:after
+    top 4px
 
 .h2__title
   font-size: 1.6em
@@ -329,6 +355,7 @@ pre
 
 [data-name=continue]
   position relative;
+
 [data-name=button][data-size=lg] .carbon-button
   font-size 1.1em
   padding 0.5em 1em
@@ -336,6 +363,7 @@ pre
 
 [data-name=plainText]
   display flex
+
   &:after
     content: attr(placeholder)
     color white
@@ -343,5 +371,6 @@ pre
     user-select none
     z-index 1
     pointer-events none
+
 [data-name=continue] [data-name=plainText]
   justify-content center
