--- a/packages/carbon-blocks-react/src/style.styl
+++ b/packages/carbon-blocks-react/src/style.styl
@@ -99,7 +99,6 @@ $lineHeight = 28px
   font-size 15px
   position relative
   outline none
-  //padding: 0px 50px
   padding-bottom 200px
   overflow: inherit
 
@@ -445,7 +444,6 @@ span[data-name=text] {
     pointer-events: none
     user-select none
     opacity: 0.4
-    padding-left: 1px;
     line-height 32px
 
 // [data-name=paragraph] > [data-type=content] > [data-name=title]
